<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>

    <string name="texr_formated">Question: %d/%d</string>
    <string name="correct_ans">Correct</string>
    <string name="incorrect_ans">inCorrect</string>
    <string name="score">your Score:</string>
</resources>